--- a/return_from_break.html
+++ b/return_from_break.html
@@ -3,16 +3,16 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <title>WorkPing Time - เข้างาน</title>
+  <title>WorkPing Time - กลับจากพัก</title>
 </head>
 <body>
-  <h2>WorkPing Time: เข้างาน</h2>
+  <h2>WorkPing Time: กลับจากพัก</h2>
   <form id="form">
     <label>ชื่อพนักงาน:
       <input type="text" name="name" required />
     </label><br><br>
-    <label>เวลาเข้างาน: <select name="time"><option>10:00</option><option>11:00</option><option>15:30</option></select></label><br><br>
-    <input type="hidden" name="status" value="เข้างาน" />
+    
+    <input type="hidden" name="status" value="กลับจากพัก" />
     <input type="hidden" id="latitude" name="latitude" />
     <input type="hidden" id="longitude" name="longitude" />
     <input type="file" accept="image/*" capture="user" name="photo" required /><br><br>
