--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=checkin.html" />
-  </head>
-  <body>
-    <p>Redirecting to check-in form...</p>
-  </body>
+<html lang="th">
+<head>
+  <meta charset="UTF-8" />
+  <title>WorkPing Time - หน้าเลือก</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f5f5f5;
+    }
+    h1 {
+      color: #2e7d32;
+    }
+    .btn {
+      display: block;
+      margin: 20px auto;
+      padding: 15px 30px;
+      font-size: 18px;
+      background: #2e7d32;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      width: 80%;
+      max-width: 300px;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>WorkPing Time</h1>
+  <p>กรุณาเลือกหน้าที่ต้องการ</p>
+
+  <a class="btn" href="checkin.html">📥 เข้างาน</a>
+  <a class="btn" href="checkout.html">📤 ออกงาน</a>
+  <a class="btn" href="return_from_break.html">☕ กลับจากพัก</a>
+</body>
 </html>
