--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <title>WorkPing Time - หน้าเลือก</title>
+  <title> ลงชื่อเข้างาน - หน้าเลือก</title>
   <style>
     body {
       font-family: sans-serif;
