--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>WorkPing Time</h1>
+  <h1>ลงชื่อเข้างาน</h1>
   <p>กรุณาเลือกหน้าที่ต้องการ</p>
 
   <a class="btn" href="checkin.html">📥 เข้างาน</a>
